Fix alignment issues and made final changes
Add alignment to elements that were still missing
it, including padding and margins. Fix the color
of certain text to stand out less. Readjust image
size to better match assignment goal.

--- a/style.css
+++ b/style.css
@@ -44,13 +44,6 @@ body > * {
     padding-bottom: 80px;
 }
 
-.content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 10px;
-}
-
 .title {
     font-size: 48px;
     font-weight: 900;
@@ -60,7 +53,7 @@ body > * {
     color:#F9FAF8;
 }
 
-.links, .subtext, .text {
+.links, .subtext, .text, .calltext {
     font-size: 18px;
     color: #E5E7EB;
 }
@@ -85,13 +78,14 @@ body > * {
 
  .caption {
     display: block;
-    max-width: 200px;
+    max-width: 150px;
+    text-align: center;
  }
 
  .quote {
     background-color: #E5E7EB;
     box-sizing: border-box;
-    padding: 20px 240px;
+    padding: 100px 240px;
     color: #1F2937;
  }
 
@@ -101,13 +95,31 @@ body > * {
     font-weight: lighter;
  }
 
- .prompt {
-    margin: 60px 200px;
+ .quote-source {
+    text-align: right;
+    margin-right: 40px;
  }
+
+ .prompt {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 60px 200px;
+    padding: 40px 0;
+    gap: 40px;
+ }
+
+ .content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 2px;
+}
 
  .footer {
     display: flex;
     justify-content: center;
+    padding: 40px 0;
  }
 
 ul {
@@ -146,10 +158,11 @@ button {
 }
 
 .image-container {
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     border: 5px solid #3882F6;
     border-radius: 10px;
+    margin-bottom: 5px;
 
 }
 
